--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
     <head>
     <meta name="google-site-verification" content="eoPCGBBxDIK0Ff9Dk_dXsuHMTNzzSEZMbsfO4zriBK8" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <link rel="shortcut icon" href="./images/doge.ico">
+	<!-- <link rel="icon" href="./assets/images/favicon.ico" type="img/png">
+    <link rel="shortcut icon" href="./assets/images/favicon.ico" type="img/png"> -->
+	<link rel="icon" href="./assets/images/favicon.ico">
+	<link rel="shortcut icon" href="./assets/images/favicon.ico">
 	<meta name="keywords" content="胡琪鑫, QIXIN HU, Qixin Hu, qixin hu, Qixin HU,
 		约翰霍普金斯大学, Johns Hopkins Univeristy, JHU,
 		华中科技大学, 华中科技, 华科, Huazhong University of Science and Technology, HUST,
@@ -376,20 +379,15 @@ AAAI 2023<br> -->
     </ul>
 <br>-->
 
-
+	
 <div id="footer1">
-	<!-- <h2> </h2>
+	<h2> </h2>
 		<div align="center">
 		  <small>This page has been visited for
 			<a href="https://www.easycounter.com/">
-			<img src="https://www.easycounter.com/counter.php?dichang" border="0" alt="HTML Hit Counter"></a>times</small>
+			<img src="https://www.easycounter.com/counter.php?qixinhu" border="0" alt="HTML Hit Counter"></a>times</small>
 		  </div> 
-	</div> -->
-<!-- <p><center>
-	<div align="center" style="width:20%">
-	  	<script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=grr8tSJTdsbdU-vHO6Of-5W7jpLTZvSVYTu6BUgf02M"></script>
-	</div>        
-</center></p> -->
+	</div>
 <p align="center"><font color="#999999">Last update: May 9th, 2023</font></p>
 </body>
 
