--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <tr>
 	<td width="670">
 		<div id="toptitle">
-			<h1 style="color:#CB4335">Qixin Hu | 胡琪鑫 🇨🇳</h1>
+			<h1 style="color:#CB4335">Qixin Hu | 胡琪鑫</h1>
 		</div>
 
 		<h3>Master Student <a href="http://english.hust.edu.cn/" target="_blank">@HUST</a><br>
