--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
 <p>	
 	Hi, I am Qixin Hu (胡琪鑫). 
 	I am a master student at <b>Huazhong University of Science and Technology (HUST)</b>. I collaborate with 
-	<b>Prof. <a href="https://www.cs.jhu.edu/~ayuille/">Alan Yuille</a></b> (Bloomberg Distinguished Professor at <a href="https://www.jhu.edu/">Johns Hopkins Univeristy</a>),
-	<b>Dr. <a href="https://www.zongweiz.com/">Zongwei Zhou</a></b> (Post-Doc at <a href="https://www.jhu.edu/">JHU</a>)
-	and <b><a href="https://xwcv.github.io/">Prof. Xinggang Wang</a></b> (Professor at HUST) closely.
+	<b>Prof. <a href="https://www.cs.jhu.edu/~ayuille/">Alan Yuille</a></b> (Bloomberg Distinguished Professor at <b><a href="https://www.jhu.edu/">Johns Hopkins Univeristy</a></b>),
+	<b>Dr. <a href="https://www.zongweiz.com/">Zongwei Zhou</a></b> (Post-Doc at <b><a href="https://www.jhu.edu/">JHU</a></b>)
+	and <b>Prof.<a href="https://xwcv.github.io/"> Xinggang Wang</a></b> (Professor at HUST) closely.
 	They are really nice people and I enjoy the time working with them.
 
 </p>
@@ -238,7 +238,7 @@
 		<ul>
 			<li style="line-height:1.5;">Position: <b>Research Intern</b> <br> 
 			<li>Supervisor: 
-				<a href="https://scholar.google.com/citations?user=0hHqYoAAAAAJ&hl=zh-CN&oi=ao" target="_blank" rel="external">
+				Assis. Prof. <a href="https://scholar.google.com/citations?user=0hHqYoAAAAAJ&hl=zh-CN&oi=ao" target="_blank" rel="external">
 					Huaizu Jiang</a>
 			<li style="line-height:1.5;">Project: Action-guide 3D human-object reconstruction<br></li>
 		</ul>
@@ -256,7 +256,7 @@
 		<ul>
 			<li style="line-height:1.5;">Position: <b>Research Intern</b> <br> 
 			<li>Supervisor: 
-				<a href="http://www.liuyebin.com/" target="_blank" rel="external">
+				Prof. <a href="http://www.liuyebin.com/" target="_blank" rel="external">
 					Yebin Liu</a>
 			<li style="line-height:1.5;">Project: Image-based 3D human reconstruction<br></li>
 		</ul>
@@ -275,7 +275,7 @@
 		<ul>
 			<li style="line-height:1.5;">Position: <b>Team Leader</b> <br> 
 			<li>Supervisor: 
-				<a href="http://phys.hust.edu.cn/info/1225/2480.htm" target="_blank" rel="external">
+				Assoc. Prof. <a href="http://phys.hust.edu.cn/info/1225/2480.htm" target="_blank" rel="external">
 					Ming Yang</a>
 			<li style="line-height:1.5;">Project: National Student Innovation and Entrepreneurship Training Program<br></li>
 		</ul>
