--- a/index.html
+++ b/index.html
@@ -154,8 +154,12 @@
 		<td style="line-height:1.2;">
 		<h3 style="color:black">Label-free Liver Tumor Segmentation</h3>
 		<p style="line-height:1.2;">
-			<b>Qixin Hu</b>, Yixiong Chen, Junfei Xiao, Shuwen Sun, Jie-Neng Chen, Alan Yuille, Zongwei Zhou<sup>#</sup><br>
+			<b>Qixin Hu</b>, Yixiong Chen, Junfei Xiao, Shuwen Sun, Jieneng Chen, Alan Yuille, Zongwei Zhou<sup>#</sup><br>
 			<em>IEEE Computer Vision and Pattern Recognition (<b>CVPR</b>) 2023.</em>
+			<p> 
+				<b style="color: red">GitHub Stars: </b>
+				<a href="https://github.com/MrGiovanni/SyntheticTumors"><img src="https://img.shields.io/github/stars/MrGiovanni/SyntheticTumors.svg?logo=github&label=Stars"></a>
+			</p>
 			<p>
 				<a href="https://arxiv.org/pdf/2303.14869.pdf" target="_blank">[Publication]</a> 
 				<a href="https://github.com/MrGiovanni/SyntheticTumors" target="_blank">[Code]</a> 
@@ -175,7 +179,7 @@
 		<td style="line-height:1.2;">
 		<h3 style="color:black">Synthetic Tumors Make AI Segment Tumors Better</h3>
 		<p style="line-height:1.2;">
-			<b>Qixin Hu</b>, Junfei Xiao, Yixiong Chen, Shuwen Sun, Jie-Neng Chen, Alan Yuille, Zongwei Zhou<sup>#</sup><br>
+			<b>Qixin Hu</b>, Junfei Xiao, Yixiong Chen, Shuwen Sun, Jieneng Chen, Alan Yuille, Zongwei Zhou<sup>#</sup><br>
 			<em>Medical Imaging meets NeurIPS (<b>NIPSw</b>) 2022.</em>
 			<p>
 				<a href="https://arxiv.org/pdf/2210.14845.pdf" target="_blank">[Publication]</a> 
