--- a/index.html
+++ b/index.html
@@ -83,17 +83,16 @@
 
 <p>	
 	Hi, I am Qixin Hu (胡琪鑫). 
-	I am a master student at <b>Huazhong University of Science and Technology (HUST)</b>. I collaborate with 
-	<b>Prof. <a href="https://www.cs.jhu.edu/~ayuille/">Alan Yuille</a></b> (Bloomberg Distinguished Professor at <b><a href="https://www.jhu.edu/">Johns Hopkins Univeristy</a></b>),
+	I am a master's student at <b>Huazhong University of Science and Technology (HUST)</b>. I collaborate with 
+	<b>Prof. <a href="https://www.cs.jhu.edu/~ayuille/">Alan Yuille</a></b> (Bloomberg Distinguished Professor at <b><a href="https://www.jhu.edu/">Johns Hopkins University</a></b>),
 	<b>Dr. <a href="https://www.zongweiz.com/">Zongwei Zhou</a></b> (Post-Doc at <b><a href="https://www.jhu.edu/">JHU</a></b>)
 	and <b>Prof.<a href="https://xwcv.github.io/"> Xinggang Wang</a></b> (Professor at HUST) closely.
 	They are really nice people and I enjoy the time working with them.
 
 </p>
 <p>
-	<b>Reseach Interest:</b> My reseach interest focus on the <b style="color:blue;">Computer Vision</b> & <b style="color:blue;">Medical Image Analysis</b>,
-	especially on developing novel methods to <b style="color:blue">reduce the effort of annotation</b> for computer-aided detection & diagnosis and <b style="color:blue">design foundation models</b> for medical & health.
-
+	<b>Reseach Interest:</b> My research interest focuses on <b style="color:blue;">Computer Vision</b> & <b style="color:blue;">Medical Image Analysis</b>,
+	especially on developing novel methods to <b style="color:blue">reduce the effort of annotation</b> for computer-aided detection & diagnosis, as well as on designing <b style="color:blue">foundation models</b> for medical & health.
 </p>
 
 
