--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
 <h2><font color="#CB4335">📙 Academic Service</font></h2>
 <ul>
 	<li>
-		ICML Workshop on Interpretable Machine Learning in Healthcare (IMLH), 2023.
+		Reviewer of ICML Workshop on Interpretable Machine Learning in Healthcare (IMLH), 2023.
 	</li>
 
 </ul>
