--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
 <table id="tbPublications" width="100%">
 
-	<td width="230">
+	<!-- <td width="230">
 		<img src="assets/images/project/liver_rsna.png" width="210px" style="box-shadow: 4px 4px 8px #888">
 		</td>
 		<td style="line-height:1.2;">
@@ -134,7 +134,7 @@
 			<b>Qixin Hu</b>, Yixion Chen, Junfei Xiao, Shuwen Sun, Jieneng Chen, Alan Yuille, Zongwei Zhou<sup>#</sup><br>
 			<em>In Submmition to <b>RSNA</b> 2023.</em>
 		</p></td>
-	</tr>
+	</tr> -->
 
 	<td width="230">
 		<img src="assets/images/project/animal3D.jpg" width="210px" style="box-shadow: 4px 4px 8px #888">
@@ -143,7 +143,7 @@
 		<h3 style="color:black">Animal3D: A Comprehensive Dataset of 3D Animal Pose and Shape</h3>
 		<p style="line-height:1.2;">
 			Jiacong Xu, Yi Zhang, Jiawei Peng, Wufei Ma, Artur Jesslen, Pengliang Ji, <b>Qixin Hu</b>, et al.<br>
-			<em>In Submmition to <b>ICCV</b> 2023.</em>
+			<em>IEEE International Conference on Computer Vision (<b>ICCV</b>) 2023.</em>
 		</p></td>
 	</tr>
 
