--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			<h1 style="color:#CB4335">Qixin Hu | 胡琪鑫</h1>
 		</div>
 
-		<h3>Master Student <a href="http://english.hust.edu.cn/" target="_blank">@HUST</a><br>
+		<h3>Research Assistant <a href="http://www.cuhk.edu.hk/" target="_blank">@CUHK</a><br>
 		</h3>
 		
 		<p>
@@ -36,11 +36,11 @@
 		</p>
 		<p>
 
-			<a href="http://english.hust.edu.cn/" target="_blank">Huazhong University of Science & Technology (HUST)</a><br>
-			1037 Luoyu Road, Wuhan, Hubei, China
+			<a href="http://www.cuhk.edu.hk/" target="_blank">The Chinese Univeristy of Hong Kong</a><br>
+			Hong Kong, China
 		</p>
 		<p>
-			Email: <a href="mailto:hqx11@hust.edu.cn">hqx11 [at] hust.edu.cn</a> / <a href="mailto:qixinhu98@gmail.com"> qixinhu98 [at] gmail [dot] com</a> 
+			Email: <a href="mailto:qixinhu98@gmail.com"> qixinhu98 [at] gmail.com</a> / <a href="mailto:qixinhu@cuhk.edu.hk">qixinhu [at] cuhk.edu.hk</a> 
 		</p>
 		<p>
 			<a href="https://scholar.google.com/citations?user=EqD5GP8AAAAJ&hl=zh-CN&oi=ao" target="_blank">
@@ -72,6 +72,9 @@
 <h2><a id="C1" ><font color="#CB4335">😀 About Me</font></a></h2>
 
 <p> 
+	<a href="http://www.cuhk.edu.hk/" target="_blank">
+		<img src="./assets/images/logo/cuhk.png" height="100px" style="vertical-align:middle">
+	</a>
 	<a href="http://english.hust.edu.cn/" target="_blank">
 		<img src="./assets/images/logo/hust.jpeg" height="100px" style="vertical-align:middle">
 	</a>
@@ -82,9 +85,9 @@
 </p>
 
 <p>	
-	Hi, I am Qixin Hu (胡琪鑫). 
-	I am a master's student at <b>Huazhong University of Science and Technology (HUST)</b>. I collaborate with 
-	<b>Prof. <a href="https://www.cs.jhu.edu/~ayuille/">Alan Yuille</a></b> (Bloomberg Distinguished Professor at <b><a href="https://www.jhu.edu/">Johns Hopkins University</a></b>),
+	Hi, my name is Qixin Hu (胡琪鑫). 
+	I'm a research assistant at <b>The Chinese University of Hong Kong</b>, working with <b>Prof. <a href="https://www.cse.cuhk.edu.hk/~qdou/">Dou Qi</a> </b>. Before that, I obtrained my Bachelor and Master degree at <b>Huazhong University of Science and Technology (HUST)</b>. 
+	I also collaborate with	<b>Prof. <a href="https://www.cs.jhu.edu/~ayuille/">Alan Yuille</a></b> (Bloomberg Distinguished Professor at <b><a href="https://www.jhu.edu/">Johns Hopkins University</a></b>),
 	<b>Dr. <a href="https://www.zongweiz.com/">Zongwei Zhou</a></b> (Post-Doc at <b><a href="https://www.jhu.edu/">JHU</a></b>)
 	and <b>Prof.<a href="https://xwcv.github.io/"> Xinggang Wang</a></b> (Professor at HUST) closely.
 	They are really nice people and I enjoy the time working with them.
