--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<meta name="keywords" content="胡琪鑫, QIXIN HU, Qixin Hu, qixin hu, Qixin HU,
 		约翰霍普金斯大学, Johns Hopkins Univeristy, JHU,
 		华中科技大学, 华中科技, 华科, Huazhong University of Science and Technology, HUST,
+		香港中文大学, 港中文, 中大, The Chinese Univeristy of Hong Kong, CUHK,
 		湖北, 武汉">
 	<meta name="description" content="Qixin Hu&#39;s Home Page">
     <link rel="stylesheet" href="./assets/css/jemdoc.css" type="text/css">
@@ -89,7 +90,7 @@
 	I'm a research assistant at <b>The Chinese University of Hong Kong</b>, working with <b>Prof. <a href="https://www.cse.cuhk.edu.hk/~qdou/">Dou Qi</a> </b>. Before that, I obtrained my Bachelor and Master degree at <b>Huazhong University of Science and Technology (HUST)</b>. 
 	I also collaborate with	<b>Prof. <a href="https://www.cs.jhu.edu/~ayuille/">Alan Yuille</a></b> (Bloomberg Distinguished Professor at <b><a href="https://www.jhu.edu/">Johns Hopkins University</a></b>),
 	<b>Dr. <a href="https://www.zongweiz.com/">Zongwei Zhou</a></b> (Post-Doc at <b><a href="https://www.jhu.edu/">JHU</a></b>)
-	and <b>Prof.<a href="https://xwcv.github.io/"> Xinggang Wang</a></b> (Professor at HUST) closely.
+	and <b>Prof.<a href="https://xwcv.github.io/"> Xinggang Wang</a></b> (Professor at HUST).
 	They are really nice people and I enjoy the time working with them.
 
 </p>
@@ -105,16 +106,27 @@
 <h2><a id="news" ><font color="#CB4335">🔥 Recent News</font></a></h2>
 
 <!--<ul><div style="height:200px; width:fit-content; overflow:auto; background:#FFFFFF;">-->
-<ul><div style="height:130px; width:fit-content; overflow:auto; background:#FFFFFF;">
-
+<ul><div style="height:150x; width:fit-content; overflow:auto; background:#FFFFFF;">
 	<li>
-		<p>[04/2023] The code for <a href="https://github.com/MrGiovanni/SyntheticTumors">synthetic tumor</a> is released </p>
+		<p>[09/2023] One paper submmited to ICLR 2024. </p>
 	</li>
 	<li>
-		<p>[03/2023] One paper accepted by CVPR 2023
+		<p>[08/2023] I will join CUHK as a research assistant this year. </p>
 	</li>
 	<li>
-		<p>[10/2022] One paper accepted by Medical Meets NeurIPS 2022
+		<p>[07/2023] I will searve as the reviewer of ICML 2023. </p>
+	</li>
+	<li>
+		<p>[06/2023] One paper has been accepted by ICCV 2023. </p>
+	</li>
+	<li>
+		<p>[04/2023] The code for <a href="https://github.com/MrGiovanni/SyntheticTumors">synthetic tumor</a> is released. </p>
+	</li>
+	<li>
+		<p>[03/2023] One paper has been accepted by CVPR 2023.
+	</li>
+	<li>
+		<p>[10/2022] One paper accepted by Medical Meets NeurIPS 2022.
 	</li>
 
 </div></ul>
@@ -214,6 +226,24 @@
 
 <table style="margin-top:-0.7em;"><tbody>
 
+
+<tr>
+	<td width="800">
+		<h4><a href="https://www.cuhk.edu.hk/" target="_blank" rel="external">
+			Department of Computer Science and Engineering, The Chinese Univeristy of Hong Kong </a><br>
+			Shatian, Hong Kong (2023/09 - now)</h4>
+		<ul>
+			<li style="line-height:1.5;">Position: <b>Research Assistant</b> <br> 
+			<li>Supervisor: 
+				Assis. Prof. <a href="http://www.cse.cuhk.edu.hk/~qdou" target="_blank" rel="external">
+					Qi Dou</a>
+			<li style="line-height:1.5;">Project: fundation model in medical image.<br></li>
+		</ul>
+	</td>
+	<td width="80px">
+		<img src="./assets/images/logo/cuhk.png" height="90px" >
+	</td>
+</tr>
 
 <tr>
 	<td width="800">
@@ -402,7 +432,7 @@ AAAI 2023<br> -->
 			<img src="https://www.easycounter.com/counter.php?qixinhu" border="0" alt="HTML Hit Counter"></a>times</small>
 		  </div> 
 	</div>
-<p align="center"><font color="#999999">Last update: June 3rd, 2023</font></p>
+<p align="center"><font color="#999999">Last update: Sep. 29, 2023</font></p>
 </body>
 
 
