--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 		<p>[08/2023] I will join CUHK as a research assistant this year. </p>
 	</li>
 	<li>
-		<p>[07/2023] I will searve as the reviewer of ICML 2023. </p>
+		<p>[07/2023] I will searve as the reviewer of ICML Workshop 2023. </p>
 	</li>
 	<li>
 		<p>[06/2023] One paper has been accepted by ICCV 2023. </p>
@@ -266,23 +266,6 @@
 	</td>
 </tr>
 
-<tr>
-	<td width="800">
-		<h4><a href="https://www.khoury.northeastern.edu/" target="_blank" rel="external">
-			Khoury College of Computer Sciences, Northeastern Univeristy </a><br>
-			Boston, USA (2022/05 - 2022/11)</h4>
-		<ul>
-			<li style="line-height:1.5;">Position: <b>Research Intern</b> <br> 
-			<li>Supervisor: 
-				Assis. Prof. <a href="https://scholar.google.com/citations?user=0hHqYoAAAAAJ&hl=zh-CN&oi=ao" target="_blank" rel="external">
-					Huaizu Jiang</a>
-			<li style="line-height:1.5;">Project: Action-guide 3D human-object reconstruction<br></li>
-		</ul>
-	</td>
-	<td>
-		<img src="./assets/images/logo/neu.png" height="80px">
-	</td>
-</tr>
 
 <tr>
 	<td width="800">
