--- a/index.html
+++ b/index.html
@@ -345,6 +345,9 @@
 <h2><font color="#CB4335">🏅 Honors and Awards</font></h2>
 <ul>
 	<li>
+		2022.10 First Class Zhixing Outstanding Student Scholarship.
+	</li>
+	<li>
 		2021.10 Outstanding Graduate Student. 
 	</li>
 	<li>
@@ -355,14 +358,14 @@
 	</li>
 </ul>
 
-<h2><font color="#CB4335">📄 Patents</font></h2>
+<!-- <h2><font color="#CB4335">📄 Patents</font></h2>
 <ul>
 	<li>
 		<p>Non-line-of-sight object identification method, system and device. </p>
 		<p>Wang Xingze, <b>Qixin Hu</b> </p>
 		<p>Granted on March 28, 2022; CN114202685A.</p>
 	</li>
-</ul>
+</ul> -->
 
 
 <h2><font color="#CB4335">📙 Academic Service</font></h2>
