--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 		<h3 style="color:black">Animal3D: A Comprehensive Dataset of 3D Animal Pose and Shape</h3>
 		<p style="line-height:1.2;">
 			Jiacong Xu, Yi Zhang, Jiawei Peng, Wufei Ma, Artur Jesslen, Pengliang Ji, <b>Qixin Hu</b>, et al.<br>
-			<em>IEEE International Conference on Computer Vision (<b>ICCV</b>) 2023.</em>
+			<em><b>ICCV</b> 2023.</em>
 		</p></td>
 	</tr>
 
@@ -169,7 +169,7 @@
 		<h3 style="color:black">Label-free Liver Tumor Segmentation</h3>
 		<p style="line-height:1.2;">
 			<b>Qixin Hu</b>, Yixiong Chen, Junfei Xiao, Shuwen Sun, Jieneng Chen, Alan Yuille, Zongwei Zhou<sup>#</sup><br>
-			<em>IEEE Computer Vision and Pattern Recognition (<b>CVPR</b>) 2023.</em>
+			<em><b>CVPR</b> 2023.</em>
 			<p> 
 				<b style="color: red">GitHub Stars: </b>
 				<a href="https://github.com/MrGiovanni/SyntheticTumors"><img src="https://img.shields.io/github/stars/MrGiovanni/SyntheticTumors.svg?logo=github&label=Stars"></a>
@@ -194,7 +194,7 @@
 		<h3 style="color:black">Synthetic Tumors Make AI Segment Tumors Better</h3>
 		<p style="line-height:1.2;">
 			<b>Qixin Hu</b>, Junfei Xiao, Yixiong Chen, Shuwen Sun, Jieneng Chen, Alan Yuille, Zongwei Zhou<sup>#</sup><br>
-			<em>Medical Imaging meets NeurIPS (<b>NIPSw</b>) 2022.</em>
+			<em><b>NeurIPS Workshop.</b> 2022.</em>
 			<p>
 				<a href="https://arxiv.org/pdf/2210.14845.pdf" target="_blank">[Publication]</a> 
 				<a href="https://github.com/MrGiovanni/SyntheticTumors" target="_blank">[Code]</a> 
@@ -211,7 +211,7 @@
 		<h3 style="color:black">Object recognition for remarkably small field-of-view with speckles</h3>
 		<p style="line-height:1.2;">
 			<b>Qixin Hu</b>, Siyan Xu, Xue-wen Chen, Xinggang Wang, Ken Xingze Wang<sup>#</sup><br>
-			<em>Applied Physics Letters (<b>APL</b>) 2021.</em>
+			<em><b>APL</b> 2021.</em>
 			<p>
 				<a href="https://aip.scitation.org/doi/abs/10.1063/5.0040343" target="_blank">[Publication]</a> 
 			</p>
