--- a/index.html
+++ b/index.html
@@ -140,16 +140,16 @@
 
 <table id="tbPublications" width="100%">
 
-	<!-- <td width="230">
-		<img src="assets/images/project/liver_rsna.png" width="210px" style="box-shadow: 4px 4px 8px #888">
+	<td width="230">
+		<img src="assets/images/project/syntheticvalidation.png" width="210px" style="box-shadow: 4px 4px 8px #888">
 		</td>
 		<td style="line-height:1.2;">
-		<h3 style="color:black">Liver Tumor Synthesis: Facilitating Annotation-Free Deep Learning for Cancer Detection and Localization</h3>
+		<h3 style="color:black">Synthetic Data as Validation.</h3>
 		<p style="line-height:1.2;">
-			<b>Qixin Hu</b>, Yixion Chen, Junfei Xiao, Shuwen Sun, Jieneng Chen, Alan Yuille, Zongwei Zhou<sup>#</sup><br>
-			<em>In Submmition to <b>RSNA</b> 2023.</em>
+			<b>Qixin Hu</b>, Alan Yuille, Zongwei Zhou<sup>#</sup><br>
+			<em>In Submmition to <b>ICLR</b> 2024.</em>
 		</p></td>
-	</tr> -->
+	</tr>
 
 	<td width="230">
 		<img src="assets/images/project/animal3D.jpg" width="210px" style="box-shadow: 4px 4px 8px #888">
@@ -418,7 +418,7 @@ AAAI 2023<br> -->
 			<img src="https://www.easycounter.com/counter.php?qixinhu" border="0" alt="HTML Hit Counter"></a>times</small>
 		  </div> 
 	</div>
-<p align="center"><font color="#999999">Last update: Sep. 29, 2023</font></p>
+<p align="center"><font color="#999999">Last update: Oct. 24, 2023</font></p>
 </body>
 
 
