--- a/index.html
+++ b/index.html
@@ -144,10 +144,13 @@
 		<img src="assets/images/project/syntheticvalidation.png" width="210px" style="box-shadow: 4px 4px 8px #888">
 		</td>
 		<td style="line-height:1.2;">
-		<h3 style="color:black">Synthetic Data as Validation.</h3>
+		<h3 style="color:black">Synthetic Data as Validation</h3>
 		<p style="line-height:1.2;">
 			<b>Qixin Hu</b>, Alan Yuille, Zongwei Zhou<sup>#</sup><br>
-			<em>In Submmition to <b>ICLR</b> 2024.</em>
+			<em><b>arXiv</b> 2023.</em>
+			<p>
+				<a href="https://arxiv.org/abs/2310.16052" target="_blank">[Publication]</a> 
+			</p>
 		</p></td>
 	</tr>
 
@@ -159,6 +162,11 @@
 		<p style="line-height:1.2;">
 			Jiacong Xu, Yi Zhang, Jiawei Peng, Wufei Ma, Artur Jesslen, Pengliang Ji, <b>Qixin Hu</b>, et al.<br>
 			<em><b>ICCV</b> 2023.</em>
+			<p>
+				<a href="https://xujiacong.github.io/Animal3D/" target="_blank">[Project]</a> 
+				<a href="https://openaccess.thecvf.com/content/ICCV2023/papers/Xu_Animal3D_A_Comprehensive_Dataset_of_3D_Animal_Pose_and_Shape_ICCV_2023_paper.pdf" target="_blank">[Publication]</a> 
+				<a href="https://github.com/XuJiacong/Animal3D/tree/main" target="_blank">[Code]</a> 
+			</p>
 		</p></td>
 	</tr>
 
@@ -409,7 +417,7 @@ AAAI 2023<br> -->
 			<img src="https://www.easycounter.com/counter.php?qixinhu" border="0" alt="HTML Hit Counter"></a>times</small>
 		  </div> 
 	</div>
-<p align="center"><font color="#999999">Last update: Oct. 24, 2023</font></p>
+<p align="center"><font color="#999999">Last update: Jan. 3, 2024</font></p>
 </body>
 
 
