--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 		约翰霍普金斯大学, Johns Hopkins Univeristy, JHU,
 		华中科技大学, 华中科技, 华科, Huazhong University of Science and Technology, HUST,
 		香港中文大学, 港中文, 中大, The Chinese Univeristy of Hong Kong, CUHK,
-		湖北, 武汉">
+		南加州大学, 南加州, University of Southern California, USC
+		Los Angeles, CA, USA">
 	<meta name="description" content="Qixin Hu&#39;s Home Page">
     <link rel="stylesheet" href="./assets/css/jemdoc.css" type="text/css">
     <title>Qixin Hu | 胡琪鑫</title>
@@ -29,36 +30,36 @@
 			<h1 style="color:#CB4335">Qixin Hu | 胡琪鑫</h1>
 		</div>
 
-		<h3>Research Assistant <a href="http://www.cuhk.edu.hk/" target="_blank">@CUHK</a><br>
+		<h3>PhD Student <a href="https://viterbischool.usc.edu/" target="_blank">@USC</a><br>
 		</h3>
 		
-		<p>
+		<!-- <p>
 			IEEE Member | CVF member
-		</p>
+		</p> -->
 		<p>
 
-			<a href="http://www.cuhk.edu.hk/" target="_blank">The Chinese Univeristy of Hong Kong</a><br>
-			Hong Kong, China
+			<a href="https://viterbischool.usc.edu/" target="_blank">Univeristy of Southern California</a><br>
+			Los Angeles, USA
 		</p>
 		<p>
-			Email: <a href="mailto:qixinhu98@gmail.com"> qixinhu98 [at] gmail.com</a> / <a href="mailto:qixinhu@cuhk.edu.hk">qixinhu [at] cuhk.edu.hk</a> 
+			Email:<a href="mailto:qixinhu@usc@edu">qixinhu [at] usc [dot] edu</a> 
 		</p>
 		<p>
-			<a href="https://scholar.google.com/citations?user=EqD5GP8AAAAJ&hl=zh-CN&oi=ao" target="_blank">
-				<img src="./assets/pics/google_scholar3.png" height="40px" style="margin-bottom:0px"></a>
-			<a href="https://github.com/qixinhu11" target="_blank">
-				<img src="./assets/pics/github_s.jpg" height="40px" style="margin-bottom:0px"></a>
-			<a href="https://orcid.org/0000-0002-7374-2000" target="_blank">
-				<img src="./assets/pics/orcid.png" height="40px" style="margin-bottom:0px"></a>
-			<a href="assets/files/CV_Hu.pdf">
-				<img src="./assets/pics/cv.png" height="40px" style="margin-bottom:0px"></a>
+			<!-- <a href="https://scholar.google.com/citations?user=EqD5GP8AAAAJ&hl=zh-CN&oi=ao" target="_blank">
+				<img src="./assets/pics/google_scholar3.png" height="40px" style="margin-bottom:0px"></a> -->
+			<!-- <a href="https://github.com/qixinhu11" target="_blank">
+				<img src="./assets/pics/github_s.jpg" height="40px" style="margin-bottom:0px"></a> -->
+			<!-- <a href="https://orcid.org/0000-0002-7374-2000" target="_blank">
+				<img src="./assets/pics/orcid.png" height="40px" style="margin-bottom:0px"></a> -->
+			<!-- <a href="assets/files/CV_Hu.pdf">
+				<img src="./assets/pics/cv.png" height="40px" style="margin-bottom:0px"></a> -->
 		</p>
 		<p>
 			<!--<a href="#news"><font size="3" color="#CB4335"><b>[News]</b></font></a>-->
-			<a href="#news"><font color="#CB4335"><b>[News]</b></font></a>
+			<!-- <a href="#news"><font color="#CB4335"><b>[News]</b></font></a> -->
 			<a href="#pub"><font color="#CB4335"><b>[Publications]</b></font></a>
 			<a href="#exp"><font color="#CB4335"><b>[Experience]</b></font></a>
-			<a href="#edu"><font color="#CB4335"><b>[Education]</b></font></a>
+			<!-- <a href="#edu"><font color="#CB4335"><b>[Education]</b></font></a> -->
 		</p>
 	</td>
 	<td>
@@ -70,9 +71,9 @@
 
 
 
-<h2><a id="C1" ><font color="#CB4335">😀 About Me</font></a></h2>
+<h2><a id="C1" ><font color="#CB4335">About Me</font></a></h2>
 
-<p> 
+<!-- <p> 
 	<a href="http://www.cuhk.edu.hk/" target="_blank">
 		<img src="./assets/images/logo/cuhk.png" height="100px" style="vertical-align:middle">
 	</a>
@@ -83,9 +84,9 @@
 		<img src="./assets/images/logo/jhu.png" height="90px" style="vertical-align:middle">
 	</a>
 
-</p>
+</p> -->
 
-<p>	
+<!-- <p>	
 	Hi, my name is Qixin Hu (胡琪鑫). 
 	I'm a research assistant at <b>The Chinese University of Hong Kong</b>, working with <b>Prof. <a href="https://www.cse.cuhk.edu.hk/~qdou/">Dou Qi</a> </b>. Before that, I obtrained my Bachelor and Master degree at <b>Huazhong University of Science and Technology (HUST)</b>. 
 	I also collaborate with	<b>Prof. <a href="https://www.cs.jhu.edu/~ayuille/">Alan Yuille</a></b> (Bloomberg Distinguished Professor at <b><a href="https://www.jhu.edu/">Johns Hopkins University</a></b>),
@@ -97,16 +98,31 @@
 <p>
 	<b>Reseach Interest:</b> My research interest focuses on <b style="color:blue;">Computer Vision</b> & <b style="color:blue;">Medical Image Analysis</b>,
 	especially on developing novel methods to <b style="color:blue">reduce the effort of annotation</b> for computer-aided detection & diagnosis, as well as on designing <b style="color:blue">foundation models</b> for medical & health.
+</p> -->
+
+<p>
+	Hi, my name is Qixin Hu (胡琪鑫). If you can't read Pinyin, just say it as "Chee-sheen Who". Hopefully, it will become Dr. Who someday; that would make it much easier to pronounce.
 </p>
 
+<p>
+	For now, I am a Ph.D. student in USC, working on projects related to image generation and new paths to artificial intelligence. 
+</p>
+<p>
+	In the past, I worked on condensed matter physics, quantum optinal control theory, and deep learning.
+</p>
+<p>
+	To the future, I see myself in digging truth and love. Lucky enough, I may find <b>the algorithm</b> to give the birth to a machine.
+</p>
 
+<!-- <p>
+	To whom it may concern, 
+</p> -->
 
-
-
-<h2><a id="news" ><font color="#CB4335">🔥 Recent News</font></a></h2>
+<!-- <h2><a id="news" ><font color="#CB4335">🔥 Recent News</font></a></h2> -->
 
 <!--<ul><div style="height:200px; width:fit-content; overflow:auto; background:#FFFFFF;">-->
-<ul><div style="height:150x; width:fit-content; overflow:auto; background:#FFFFFF;">
+<!-- <ul><div style="height:150x; width:fit-content; overflow:auto; background:#FFFFFF;">
+	
 	<li>
 		<p>[09/2023] One paper submmited to ICLR 2024. </p>
 	</li>
@@ -129,14 +145,14 @@
 		<p>[10/2022] One paper accepted by Medical Meets NeurIPS 2022.
 	</li>
 
-</div></ul>
+</div></ul> -->
 
 
 <!-- <a href="pub.html">[Full List]</a> -->
 <h2><a id="pub" ><font color="#CB4335">📝 Publications</font></a> 
 	</h2>
 
-<p>*: equivalent contribution, <sup>#</sup>:  corresponding author.<br></p>
+<!-- <p>*: equivalent contribution, <sup>#</sup>:  corresponding author.<br></p> -->
 
 <table id="tbPublications" width="100%">
 
@@ -146,8 +162,8 @@
 		<td style="line-height:1.2;">
 		<h3 style="color:black">Synthetic Data as Validation</h3>
 		<p style="line-height:1.2;">
-			<b>Qixin Hu</b>, Alan Yuille, Zongwei Zhou<sup>#</sup><br>
-			<em><b>arXiv</b> 2023.</em>
+			Qixin Hu, Alan Yuille, Zongwei Zhou<br>
+			<!-- <em><b>arXiv</b> 2023.</em> -->
 			<p>
 				<a href="https://arxiv.org/abs/2310.16052" target="_blank">[Publication]</a> 
 			</p>
@@ -160,8 +176,8 @@
 		<td style="line-height:1.2;">
 		<h3 style="color:black">Animal3D: A Comprehensive Dataset of 3D Animal Pose and Shape</h3>
 		<p style="line-height:1.2;">
-			Jiacong Xu, Yi Zhang, Jiawei Peng, Wufei Ma, Artur Jesslen, Pengliang Ji, <b>Qixin Hu</b>, et al.<br>
-			<em><b>ICCV</b> 2023.</em>
+			Jiacong Xu, Yi Zhang, Jiawei Peng, Wufei Ma, Artur Jesslen, Pengliang Ji, Qixin Hu, et al.<br>
+			<!-- <em><b>ICCV</b> 2023.</em> -->
 			<p>
 				<a href="https://xujiacong.github.io/Animal3D/" target="_blank">[Project]</a> 
 				<a href="https://openaccess.thecvf.com/content/ICCV2023/papers/Xu_Animal3D_A_Comprehensive_Dataset_of_3D_Animal_Pose_and_Shape_ICCV_2023_paper.pdf" target="_blank">[Publication]</a> 
@@ -176,10 +192,11 @@
 		<td style="line-height:1.2;">
 		<h3 style="color:black">Label-free Liver Tumor Segmentation</h3>
 		<p style="line-height:1.2;">
-			<b>Qixin Hu</b>, Yixiong Chen, Junfei Xiao, Shuwen Sun, Jieneng Chen, Alan Yuille, Zongwei Zhou<sup>#</sup><br>
-			<em><b>CVPR</b> 2023.</em>
+			Qixin Hu, Yixiong Chen, Junfei Xiao, Shuwen Sun, Jieneng Chen, Alan Yuille, Zongwei Zhou<br>
+			<!-- <em><b>CVPR</b> 2023.</em> -->
 			<p> 
-				<b style="color: red">GitHub Stars: </b>
+				<!-- <b style="color: red">GitHub Stars: </b> -->
+				<b>Github  </b>
 				<a href="https://github.com/MrGiovanni/SyntheticTumors"><img src="https://img.shields.io/github/stars/MrGiovanni/SyntheticTumors.svg?logo=github&label=Stars"></a>
 			</p>
 			<p>
@@ -201,8 +218,8 @@
 		<td style="line-height:1.2;">
 		<h3 style="color:black">Synthetic Tumors Make AI Segment Tumors Better</h3>
 		<p style="line-height:1.2;">
-			<b>Qixin Hu</b>, Junfei Xiao, Yixiong Chen, Shuwen Sun, Jieneng Chen, Alan Yuille, Zongwei Zhou<sup>#</sup><br>
-			<em><b>NeurIPS Workshop.</b> 2022.</em>
+			Qixin Hu, Junfei Xiao, Yixiong Chen, Shuwen Sun, Jieneng Chen, Alan Yuille, Zongwei Zhou<br>
+			<!-- <em><b>NeurIPS Workshop.</b> 2022.</em> -->
 			<p>
 				<a href="https://arxiv.org/pdf/2210.14845.pdf" target="_blank">[Publication]</a> 
 				<a href="https://github.com/MrGiovanni/SyntheticTumors" target="_blank">[Code]</a> 
@@ -218,8 +235,8 @@
 		<td style="line-height:1.2;">
 		<h3 style="color:black">Object recognition for remarkably small field-of-view with speckles</h3>
 		<p style="line-height:1.2;">
-			<b>Qixin Hu</b>, Siyan Xu, Xue-wen Chen, Xinggang Wang, Ken Xingze Wang<sup>#</sup><br>
-			<em><b>APL</b> 2021.</em>
+			Qixin Hu, Siyan Xu, Xue-wen Chen, Xinggang Wang, Ken Xingze Wang<br>
+			<!-- <em><b>APL</b> 2021.</em> -->
 			<p>
 				<a href="https://aip.scitation.org/doi/abs/10.1063/5.0040343" target="_blank">[Publication]</a> 
 			</p>
@@ -238,10 +255,10 @@
 <tr>
 	<td width="800">
 		<h4><a href="https://www.cuhk.edu.hk/" target="_blank" rel="external">
-			Department of Computer Science and Engineering, The Chinese Univeristy of Hong Kong </a><br>
-			Shatian, Hong Kong (2023/09 - now)</h4>
+			Department of Computer Science and Engineering, The Chinese Univeristy of Hong Kong </a><br></h4>
+			<!-- Shatian, Hong Kong (2023/09 - now)</h4> -->
 		<ul>
-			<li style="line-height:1.5;">Position: <b>Research Assistant</b> <br> 
+			<li style="line-height:1.5;">Position: Research Assistant <br> 
 			<li>Supervisor: 
 				Assis. Prof. <a href="http://www.cse.cuhk.edu.hk/~qdou" target="_blank" rel="external">
 					Qi Dou</a>
@@ -256,10 +273,10 @@
 <tr>
 	<td width="800">
 		<h4><a href="https://www.cs.jhu.edu/" target="_blank" rel="external">
-			Department of Cognitive Science and Computer Science, Johns Hopkins Univeristy </a><br>
-			Baltimore, USA (2022/05 - now)</h4>
+			Department of Cognitive Science and Computer Science, Johns Hopkins Univeristy </a><br></h4>
+			<!-- Baltimore, USA (2022/05 - now)</h4> -->
 		<ul>
-			<li style="line-height:1.5;">Position: <b>Research Intern</b> <br> 
+			<li style="line-height:1.5;">Position: Research Intern <br> 
 			<li>Supervisor: 
 				Prof. <a href="https://www.cs.jhu.edu/~ayuille/" target="_blank" rel="external">
 					Alan L. Yuille</a> (Bloomberg Distinguished Professor) &
@@ -278,10 +295,10 @@
 <tr>
 	<td width="800">
 		<h4><a href="https://www.sist.tsinghua.edu.cn/sisten/" target="_blank" rel="external">
-			Department of Automation, Tsinghua Univeristy </a><br>
-			Beijing, China (2021/06 - 2021/09)</h4>
+			Department of Automation, Tsinghua Univeristy </a><br></h4>
+			<!-- Beijing, China (2021/06 - 2021/09)</h4> -->
 		<ul>
-			<li style="line-height:1.5;">Position: <b>Research Intern</b> <br> 
+			<li style="line-height:1.5;">Position: Research Intern <br> 
 			<li>Supervisor: 
 				Prof. <a href="http://www.liuyebin.com/" target="_blank" rel="external">
 					Yebin Liu</a>
@@ -297,10 +314,10 @@
 <tr>
 	<td width="800">
 		<h4><a href="http://english.phys.hust.edu.cn/" target="_blank" rel="external">
-				School of Physics, Huazhong Univeristy of Science and Technology </a><br>
-			Wuhan, China (2019/04 - 2020/04)</h4>
+				School of Physics, Huazhong Univeristy of Science and Technology </a><br></h4>
+			<!-- Wuhan, China (2019/04 - 2020/04)</h4> -->
 		<ul>
-			<li style="line-height:1.5;">Position: <b>Team Leader</b> <br> 
+			<li style="line-height:1.5;">Position: Team Leader</b> <br> 
 			<li>Supervisor: 
 				Assoc. Prof. <a href="http://phys.hust.edu.cn/info/1225/2480.htm" target="_blank" rel="external">
 					Ming Yang</a>
@@ -315,7 +332,7 @@
 </tbody></table>
 
 
-
+<!-- 
 <h2><a id="edu" ><font color="#CB4335">📖 Education</font></a></h2>
 
 <table><tbody>
@@ -345,13 +362,15 @@
 		</ul>
 	</td>
 </tr>
-<!--<tr></tr>-->
-</tbody></table>
+</tbody></table> -->
 
 
 
 <h2><font color="#CB4335">🏅 Honors and Awards</font></h2>
 <ul>
+	<li>
+		2024.05 USC Viterbi School of Engineering/Graduate School Fellowship.
+	</li>
 	<li>
 		2022.10 First Class Zhixing Outstanding Student Scholarship.
 	</li>
@@ -361,14 +380,17 @@
 	<li>
 		2020.06 Honored Undergraduates. 
 	</li>
-	<li>
-		2018.10 National Encouragement Scholarship.
-	</li>
+	<!-- <li>
+		2018.10 National Scholarship.
+	</li> -->
 </ul>
 
 
 <h2><font color="#CB4335">📙 Academic Service</font></h2>
 <ul>
+	<li>
+		Reviewer of NeurIPS Workshop on GenAI for Health, 2024.
+	</li>
 	<li>
 		Reviewer of ICML Workshop on Interpretable Machine Learning in Healthcare (IMLH), 2023.
 	</li>
@@ -417,7 +439,7 @@ AAAI 2023<br> -->
 			<img src="https://www.easycounter.com/counter.php?qixinhu" border="0" alt="HTML Hit Counter"></a>times</small>
 		  </div> 
 	</div>
-<p align="center"><font color="#999999">Last update: Jan. 3, 2024</font></p>
+<p align="center"><font color="#999999">Last update: Oct. 1, 2024</font></p>
 </body>
 
 
