update experience and paper

--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
 			<!--<a href="#news"><font size="3" color="#CB4335"><b>[News]</b></font></a>-->
 			<!-- <a href="#news"><font color="#CB4335"><b>[News]</b></font></a> -->
 			<a href="#pub"><font color="#CB4335"><b>[Publications]</b></font></a>
-			<a href="#exp"><font color="#CB4335"><b>[Experience]</b></font></a>
+			<a href="#company"><font color="#CB4335"><b>[Internship Experience]</b></font></a>
+			<a href="#exp"><font color="#CB4335"><b>[Research Experience]</b></font></a>
 			<!-- <a href="#edu"><font color="#CB4335"><b>[Education]</b></font></a> -->
 		</p>
 	</td>
@@ -105,10 +106,10 @@
 </p>
 
 <p>
-	For now, I am a Ph.D. student in USC, working on projects related to image generation and new paths to artificial intelligence. 
+	For now, I am a Ph.D. student in USC, working with <b>Prof. <a href="https://viterbi.usc.edu/directory/faculty/Kuo/Chung-Chieh">C.-C. Jay Kuo</a> </b>. My research here mainly focus in developing and applying statistical learning algorithms. For those who are familized with deep larning, I want to develop algorithms without using neuron or back-propagation.
 </p>
 <p>
-	In the past, I worked on condensed matter physics, quantum optinal control theory, and deep learning.
+	In the past, I worked on computer vision, deep learning and medical image analysis. I am very fortunate to have opportunities to collaborate with <b>Prof. <a href="https://www.cse.cuhk.edu.hk/~qdou/">Dou Qi</a> </b>, <b>Dr. <a href="https://www.zongweiz.com/">Zongwei Zhou</a></b>, <b>Prof. <a href="https://www.cs.jhu.edu/~ayuille/">Alan Yuille</a></b>, and <b>Prof.<a href="https://xwcv.github.io/"> Xinggang Wang</a></b>. They are really nice people and I enjoy the time working with them.
 </p>
 <p>
 	To the future, I see myself in digging truth and love. Lucky enough, I may find <b>the algorithm</b> to give the birth to a machine.
@@ -155,6 +156,36 @@
 <!-- <p>*: equivalent contribution, <sup>#</sup>:  corresponding author.<br></p> -->
 
 <table id="tbPublications" width="100%">
+
+
+	<td width="230">
+		<img src="assets/images/project/analysis_by_synthesis.webp" width="210px" style="box-shadow: 4px 4px 8px #888">
+		</td>
+		<td style="line-height:1.2;">
+		<h3 style="color:black">Analyzing Tumors by Synthesis</h3>
+		<p style="line-height:1.2;">
+			Qi Chen, Yuxiang Lai, Xiaoxi Chen, Qixin Hu, Alan Yuille, Zongwei Zhou<br>
+			<p>
+				<a href="https://link.springer.com/chapter/10.1007/978-3-031-80965-1_5" target="_blank">[Publication]</a> 
+			</p>
+		</p></td>
+	</tr>	
+
+
+	<td width="230">
+		<img src="assets/images/project/miccai2024.png" width="210px" style="box-shadow: 4px 4px 8px #888">
+		</td>
+		<td style="line-height:1.2;">
+		<h3 style="color:black">Language-Enhanced Local-Global Aggregation Network for Multi-Organ Trauma Detection</h3>
+		<p style="line-height:1.2;">
+			Jianxun Yu, Qixin Hu, Meirui Jiang, et al.<br>
+			<p>
+				<a href="https://papers.miccai.org/miccai-2024/paper/1056_paper.pdf" target="_blank">[Publication]</a> 
+				<a href="https://github.com/med-air/TraumaDet" target="_blank">[Code]</a> 
+			</p>
+		</p></td>
+	</tr>
+
 
 	<td width="230">
 		<img src="assets/images/project/syntheticvalidation.png" width="210px" style="box-shadow: 4px 4px 8px #888">
@@ -246,11 +277,30 @@
 </table>
 
 
+<h2><a id="company" ><font color="#CB4335">💻 Company Experience</font></a></h2>
+<table style="margin-top:-0.7em;"><tbody>
+<tr>
+	<td width="800">
+		<h4><a href="https://www.fulgentgenetics.com/" target="_blank" rel="external">
+			Fulgent Genetics, El Monte</a><br></h4>
+		<ul>
+			<li style="line-height:1.5;">Position: Machine Learning Research Intern <br> 
+			<li style="line-height:1.5;">Project: Statistical learning for detecting whole slide images<br></li>
+		</ul>
+	</td>
+	<td width="100px">
+		<img src="./assets/images/logo/fulgent.png" height="140px" >
+	</td>
+</tr>
 
-<h2><a id="exp" ><font color="#CB4335">💻 Experience</font></a></h2>
+
+</tbody></table>
+
+
+
+<h2><a id="exp" ><font color="#CB4335">💻 Univeristy Experience</font></a></h2>
 
 <table style="margin-top:-0.7em;"><tbody>
-
 
 <tr>
 	<td width="800">
@@ -291,12 +341,11 @@
 	</td>
 </tr>
 
-
-<tr>
+<!-- Beijing, China (2021/06 - 2021/09)</h4> -->
+<!-- <tr>
 	<td width="800">
 		<h4><a href="https://www.sist.tsinghua.edu.cn/sisten/" target="_blank" rel="external">
 			Department of Automation, Tsinghua Univeristy </a><br></h4>
-			<!-- Beijing, China (2021/06 - 2021/09)</h4> -->
 		<ul>
 			<li style="line-height:1.5;">Position: Research Intern <br> 
 			<li>Supervisor: 
@@ -309,7 +358,7 @@
 
 		<img src="./assets/images/logo/thu.png" height="100px">
 	</td>
-</tr>
+</tr> -->
 
 <tr>
 	<td width="800">
@@ -439,7 +488,7 @@ AAAI 2023<br> -->
 			<img src="https://www.easycounter.com/counter.php?qixinhu" border="0" alt="HTML Hit Counter"></a>times</small>
 		  </div> 
 	</div>
-<p align="center"><font color="#999999">Last update: Oct. 1, 2024</font></p>
+<p align="center"><font color="#999999">Last update: May 19, 2025</font></p>
 </body>
 
 
