--- a/index.html
+++ b/index.html
@@ -106,7 +106,8 @@
 </p>
 
 <p>
-	For now, I am a Ph.D. student in USC, working with <b>Prof. <a href="https://viterbi.usc.edu/directory/faculty/Kuo/Chung-Chieh">C.-C. Jay Kuo</a> </b>. My research here mainly focus in developing and applying statistical learning algorithms. For those who are familized with deep larning, I want to develop algorithms without using neuron or back-propagation.
+	For now, I am a Ph.D. student in USC, working with <b>Prof. <a href="https://viterbi.usc.edu/directory/faculty/Kuo/Chung-Chieh">C.-C. Jay Kuo</a></b>. My research here mainly focuses on statistical learning and statistical representation learning. For those who are familiar with deep learning, I want to develop algorithms without using neurons or back-propagation.
+More specifically, I want to design new statistical learning algorithms and apply them to real-world applications. Also, I'm working on finding and evaluating good representations for high-dimensional data like images.
 </p>
 <p>
 	In the past, I worked on computer vision, deep learning and medical image analysis. I am very fortunate to have opportunities to collaborate with <b>Prof. <a href="https://www.cse.cuhk.edu.hk/~qdou/">Dou Qi</a> </b>, <b>Dr. <a href="https://www.zongweiz.com/">Zongwei Zhou</a></b>, <b>Prof. <a href="https://www.cs.jhu.edu/~ayuille/">Alan Yuille</a></b>, and <b>Prof.<a href="https://xwcv.github.io/"> Xinggang Wang</a></b>. They are really nice people and I enjoy the time working with them.
