--- a/index.html
+++ b/index.html
@@ -102,15 +102,15 @@
 </p> -->
 
 <p>
-	Hi, my name is Qixin Hu (胡琪鑫). If you can't read Pinyin, just say it as "Chee-sheen Who". Hopefully, it will become Dr. Who someday; that would make it much easier to pronounce.
+	Hi, my name is Qixin Hu (胡琪鑫). If you can't read Pinyin, you can pronounce it as "Chee-sheen Who." Hopefully, I will become Dr. Who someday; that would make it much easier to pronounce.
 </p>
 
 <p>
-	For now, I am a Ph.D. student in USC, working with <b>Prof. <a href="https://viterbi.usc.edu/directory/faculty/Kuo/Chung-Chieh">C.-C. Jay Kuo</a></b>. My research here mainly focuses on statistical learning and statistical representation learning. For those who are familiar with deep learning, I want to develop algorithms without using neurons or back-propagation.
-More specifically, I want to design new statistical learning algorithms and apply them to real-world applications. Also, I'm working on finding and evaluating good representations for high-dimensional data like images.
+	For now, I am a Ph.D. student at USC, working with <b>Prof. <a href="https://viterbi.usc.edu/directory/faculty/Kuo/Chung-Chieh">C.-C. Jay Kuo</a></b>.  I am a recipient of the <b><a href="https://graduateschool.usc.edu/fellowships/">Viterbi Fellowship</a></b>. My research here mainly focuses on statistical learning and statistical representation. For those who are familiar with deep learning, I want to develop algorithms without using back-propagation.
+More specifically, I want to design new statistical learning algorithms and apply them to real-world applications. I'm also working on finding and evaluating good representations for high-dimensional data.
 </p>
 <p>
-	In the past, I worked on computer vision, deep learning and medical image analysis. I am very fortunate to have opportunities to collaborate with <b>Prof. <a href="https://www.cse.cuhk.edu.hk/~qdou/">Dou Qi</a> </b>, <b>Dr. <a href="https://www.zongweiz.com/">Zongwei Zhou</a></b>, <b>Prof. <a href="https://www.cs.jhu.edu/~ayuille/">Alan Yuille</a></b>, and <b>Prof.<a href="https://xwcv.github.io/"> Xinggang Wang</a></b>. They are really nice people and I enjoy the time working with them.
+	In the past, I worked on computer vision, deep learning and medical image analysis. I am very fortunate to had opportunities to collaborate with <b>Prof. <a href="https://www.cse.cuhk.edu.hk/~qdou/">Qi Dou</a> </b>, <b>Dr. <a href="https://www.zongweiz.com/">Zongwei Zhou</a></b>, <b>Prof. <a href="https://www.cs.jhu.edu/~ayuille/">Alan Yuille</a></b>, and <b>Prof.<a href="https://xwcv.github.io/"> Xinggang Wang</a></b>. They are really nice people and I enjoy the time working with them.
 </p>
 <p>
 	To the future, I see myself in digging truth and love. Lucky enough, I may find <b>the algorithm</b> to give the birth to a machine.
@@ -286,7 +286,7 @@ More specifically, I want to design new statistical learning algorithms and appl
 			Fulgent Genetics, El Monte</a><br></h4>
 		<ul>
 			<li style="line-height:1.5;">Position: Machine Learning Research Intern <br> 
-			<li style="line-height:1.5;">Project: Statistical learning for detecting whole slide images<br></li>
+			<li style="line-height:1.5;">Project: Statistical representation for detecting whole slide images<br></li>
 		</ul>
 	</td>
 	<td width="100px">
@@ -438,6 +438,12 @@ More specifically, I want to design new statistical learning algorithms and appl
 
 <h2><font color="#CB4335">📙 Academic Service</font></h2>
 <ul>
+	<li>
+		Reviewer of APSIPA Transactions on Signal and Information Processing.
+	</li>
+	<li>
+		Reviewer of NeurIPS, 2025.
+	</li>
 	<li>
 		Reviewer of NeurIPS Workshop on GenAI for Health, 2024.
 	</li>
