--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@ More specifically, I want to design new statistical learning algorithms and appl
 <tr>
 	<td width="800">
 		<h4><a href="https://www.fulgentgenetics.com/" target="_blank" rel="external">
-			Fulgent Genetics, El Monte</a><br></h4>
+			Fulgent Genetics, Los Angeles</a><br></h4>
 		<ul>
 			<li style="line-height:1.5;">Position: Machine Learning Research Intern <br> 
 			<li style="line-height:1.5;">Project: Statistical representation for detecting whole slide images<br></li>
