--- a/index.html
+++ b/index.html
@@ -106,9 +106,8 @@
 </p>
 
 <p>
-	For now, I am a Ph.D. student at USC, working with <b>Prof. <a href="https://viterbi.usc.edu/directory/faculty/Kuo/Chung-Chieh">C.-C. Jay Kuo</a></b>.  I am a recipient of the <b><a href="https://graduateschool.usc.edu/fellowships/">Viterbi Fellowship</a></b>. My research here mainly focuses on statistical learning and statistical representation. For those who are familiar with deep learning, I want to develop algorithms without using back-propagation.
-More specifically, I want to design new statistical learning algorithms and apply them to real-world applications. I'm also working on finding and evaluating good representations for high-dimensional data.
-</p>
+	For now, I am a second-year Ph.D. student at USC, working with <b>Prof. <a href="https://viterbi.usc.edu/directory/faculty/Kuo/Chung-Chieh">C.-C. Jay Kuo</a></b>.  I am a recipient of the <b><a href="https://graduateschool.usc.edu/fellowships/">Viterbi Fellowship</a></b>. My research here lie broadly in representation learning and machine learning. 
+Specifically, I want to design simple and efficient algorithms and apply them to real-world applications.
 <p>
 	In the past, I worked on computer vision, deep learning and medical image analysis. I am very fortunate to had opportunities to collaborate with <b>Prof. <a href="https://www.cse.cuhk.edu.hk/~qdou/">Qi Dou</a> </b>, <b>Dr. <a href="https://www.zongweiz.com/">Zongwei Zhou</a></b>, <b>Prof. <a href="https://www.cs.jhu.edu/~ayuille/">Alan Yuille</a></b>, and <b>Prof.<a href="https://xwcv.github.io/"> Xinggang Wang</a></b>. They are really nice people and I enjoy the time working with them.
 </p>
