add program committee of AAAI

--- a/index.html
+++ b/index.html
@@ -438,6 +438,10 @@ Specifically, I want to design simple and efficient algorithms and apply them to
 <h2><font color="#CB4335">📙 Academic Service</font></h2>
 <ul>
 	<li>
+		Program Committee of The Association for the Advancement of Artificial Intelligence (AAAI), 2025.
+	</li>
+
+	<li>
 		Reviewer of APSIPA Transactions on Signal and Information Processing.
 	</li>
 	<li>
